# pntr_tiled

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: Findpntr.cmake  Findpntr_app.cmake  Findpntr_assetsys.cmake
examples/: CMakeLists.txt  debug_map.h  pntr_tiled_example.c  pntr_tiled_example.tiled-project  pntr_tiled_example.tmx  pntr_tiled_example_rpg.c
examples/resources/: bob.tsj  desert.json  desert.tmj  desert.tmx  desert.tsj
examples/resources/rpg/: U1.tmj  U2.tmj  U3.tmj  U4.tmj  sprites.tsj  underworld-A.tmj  underworld-B.tmj  underworld.tmj  welcome.tmj
include/: cute_tiled.h  pntr_tiled.h  pntr_tiled_assetsys.h
test/: CMakeLists.txt  pntr_tiled_test.c  pntr_tiled_test.tmx  resources
test/resources/: desert.json  pntr_tiled_test.json  pntr_tiled_test.tmj
